# axm-console

./: .gitignore  README.md  THE PHYSICS OF FAILURE.md  conftest.py  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  pages.yml
axm_console/: __init__.py  ask.py  cli.py  console.py  queue.py  receipt.py  surfaces.py
docs/: CONTINUITY.md  HANDOFF.md  operators-map.html
tests/: test_ask.py  test_console.py  test_surface_drivers.py
